--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,8 @@ footer {
 .checklist {
     list-style-type: none;
     padding: 0;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
 }
 
 #listOfChecklists {
@@ -47,7 +49,13 @@ footer {
     padding-left: 1em;
 }
 
+#uncheckButton {
+    margin-left: 0.3em;
+    width: 10em;
+}
+
 #indexLink {
+    display: block;
     background-color: #387301;
     border: none;
     color: white;
@@ -56,4 +64,5 @@ footer {
     text-decoration: none;
     margin: 0.3em 0.3em;
     cursor: pointer;
+    width: 7em;
 }
