--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,9 @@ footer {
 
 .checklist label {
     font-size: 20px;
+    max-width: 50em;
+    white-space: normal;
+    display: inline-block; /* To respect the width constraints */
 }
 
 #listOfChecklists {
